hphp/test/quick/function_pointer/class_meth_disabled.php.expectf
Fatal error: `class_meth()` is disabled; switch to first-class references like `C::bar<>` in %s/test/quick/function_pointer/class_meth_disabled.php on line 9